# dcel

./: .gitignore  CODE_OF_CONDUCT.md  README.md  nx.json  package-lock.json  package.json
pydcel/: README.md  project.json  pyproject.toml
pydcel/dcel/: __init__.py  dcel.py  point.py  primitives.py  utils.py  vertex.py
pydcel/tests/: test.py
